# cpp-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: compiler_options.cmake  dependencies.cmake
project/: CMakeLists.txt
project/game/: CMakeLists.txt
project/game/src/: game.cpp
project/nova/: CMakeLists.txt
project/nova/include/nova/: nova.hpp  registry.hpp  world.hpp
project/nova/include/nova/app/: app.hpp  core_stages.hpp  default_plugins.hpp
project/nova/include/nova/bundle/: bundle.hpp
project/nova/include/nova/debug/: debug.hpp
project/nova/include/nova/label/: builder.hpp  label.hpp
project/nova/include/nova/resource/: resource.hpp
project/nova/include/nova/scheduler/: graph.hpp  scheduler.hpp  stage.hpp
project/nova/include/nova/system/: system.hpp  system_builder.hpp  system_data.hpp  view.hpp
project/nova/include/nova/time/: time.hpp  time_plugin.hpp
project/nova/include/nova/util/: algorithm.hpp  bitset.hpp  common.hpp  hash.hpp  meta.hpp  ranges.hpp  reflection.hpp  type.hpp  type_map.hpp  void_ptr.hpp
project/nova/test/: app_test.cpp  bitset_test.cpp  bundle_test.cpp  common.hpp  graph_test.cpp  reflection_test.cpp  registry_test.cpp  scheduler_test.cpp  system_builder_test.cpp  system_test.cpp  type_map_test.cpp
